--- a/portafolio.html
+++ b/portafolio.html
@@ -50,12 +50,12 @@
                         También hago ejercicios físicos y paso tiempo de calidad con mi familia.</p>
                     <div class="social-icons">
                         <a href="https://github.com/Urielmajb" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/yourusername/" target="_blank"><i
+                        <a href="https://www.linkedin.com/in/urielmajb/" target="_blank"><i
                                 class="fab fa-linkedin"></i></a>
-                        <a href="https://www.instagram.com/yourusername/" target="_blank"><i
-                                class="fab fa-instagram"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                        <a href="https://www.canva.com/design/DAFUaYo7c9Q/AActmO_NCII7ja-DNcpPNg/edit?utm_content=DAFUaYo7c9Q&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        <!-- <a href="https://www.instagram.com/yourusername/" target="_blank"><i
+                                class="fab fa-instagram"></i></a> -->
+                        <!-- <a href="#" target="_blank"><i class="fab fa-twitter-square"></i></a> -->
+                        <a href="https://www.canva.com/design/DAGKnL6s_iY/5CseKdmPqfMdDnHM1UK-sw/edit?utm_content=DAGKnL6s_iY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
                             target="_blank"><i class="fa-regular fa-file"></i></a>
                     </div>
                 </div>
