Mejoras, se compuso lo responsive

--- a/portafolio.html
+++ b/portafolio.html
@@ -174,31 +174,7 @@
                     </div>
                 </div>
             </article>
-            <!-- Más proyectos -->
-              <!-- Agrega más proyectos aquí siguiendo el mismo formato -->
-            <article class="article-wrapper">
-                <div class="container-project">
-                    <a href="https://github.com/Urielmajb/DisenioLogin_Bootstrap" target="_blank">
-                        <img src="assets/img/DisenioLogin.png" alt="Proyecto 2">
-                    </a>
-                </div>
-                <div class="project-info">
-                    <div class="flex-pr">
-                        <div class="project-title">Login Design</div>
-                        <div class="project-hover">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
-                                <line y2="12" x2="19" y1="12" x1="5"></line>
-                                <polyline points="12 5 19 12 12 19"></polyline>
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="types">
-                        <span class="project-type">• HTML5</span>
-                        <span class="project-type">• CSS3</span>
-                        <span class="project-type">• JS</span>
-                    </div>
-                </div>
-            </article>
+             
             <!-- Más proyectos -->
               <!-- Agrega más proyectos aquí siguiendo el mismo formato -->
             <article class="article-wrapper">
@@ -256,7 +232,7 @@
                 </div>
                 <div class="project-info">
                     <div class="flex-pr">
-                        <div class="project-title">WebScrapping</div>
+                        <div class="project-title">New Portfolio</div>
                         <div class="project-hover">
                             <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
                                 <line y2="12" x2="19" y1="12" x1="5"></line>
@@ -265,8 +241,8 @@
                         </div>
                     </div>
                     <div class="types">
-                        <span class="project-type">• Data</span>
-                        <span class="project-type">• Python</span>
+                        <span class="project-type">• React</span>
+                        <span class="project-type">• TailwindCSS</span>
                     </div>
                 </div>
             </article>
