Seccion Proyectos Modificados

--- a/portafolio.html
+++ b/portafolio.html
@@ -151,7 +151,7 @@
                 </div>
             </article>
             <!-- Agrega más proyectos aquí siguiendo el mismo formato -->
-            <article class="article-wrapper">
+            <!-- <article class="article-wrapper">
                 <div class="container-project">
                     <a href="https://github.com/Urielmajb/GestionFilas.git" target="_blank">
                         <img src="assets/img/SistemaFilas2.png" alt="Proyecto 2">
@@ -173,7 +173,7 @@
                         <span class="project-type">• JS</span>
                     </div>
                 </div>
-            </article>
+            </article> -->
              
             <!-- Más proyectos -->
               <!-- Agrega más proyectos aquí siguiendo el mismo formato -->
