--- a/portafolio.html
+++ b/portafolio.html
@@ -43,6 +43,9 @@
             <div id="about-me" class="section about-me">
                 <div class="profile-container">
                     <img src="assets/img/yo.jpg" alt="Profile Image" style="margin-top: 90px;" class="profile-image">
+                    <div class="status-tag">
+                        <span>👽 I'm looking for a job!</span>
+                    </div>
                 </div>
                 <div class="about-content">
                     <h2 class="section-title typing-demo">Hi!, I'm Urielma 🤓</h2>
@@ -50,19 +53,17 @@
                         in various multidisciplinary fields, always eager to explore new technologies</p>
                     <p>I enjoy anime and reading manga, as well as listening to music all the time and playing video
                         games.</p>
+                  
                     <div class="social-icons">
                         <a href="https://github.com/Urielmajb" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/urielmajb/" target="_blank"><i
                                 class="fab fa-linkedin"></i></a>
-                        <a href="https://www.canva.com/design/DAGKnL6s_iY/5CseKdmPqfMdDnHM1UK-sw/edit?utm_content=DAGKnL6s_iY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
-                            target="_blank"><i class="fa-regular fa-file"></i></a>
+                        <a href="https://drive.google.com/file/d/1KPgKh9oEgpSw87hBAiRcza-ajIHcqRmA/view?usp=sharing" download style="text-decoration: none;" target="_blank"><i class="fa-solid fa-download"></i> Download CV</a>
                     </div>
                 </div>
             </div>
         </section>
     </div>
-
-
 
    <!-- Skills Section -->
   <!-- Programming Languages Section -->
