--- a/portafolio.html
+++ b/portafolio.html
@@ -53,7 +53,7 @@
                         in various multidisciplinary fields, always eager to explore new technologies</p>
                     <p>I enjoy anime and reading manga, as well as listening to music all the time and playing video
                         games.</p>
-                  
+                    </div>
                     <div class="social-icons">
                         <a href="https://github.com/Urielmajb" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/urielmajb/" target="_blank"><i
