--- a/portafolio.html
+++ b/portafolio.html
@@ -45,7 +45,7 @@
                     <img src="assets/img/yo.jpg" alt="Profile Image" style="margin-top: 90px;" class="profile-image">
                 </div>
                 <div class="about-content">
-                    <h2 class="section-title typing-demo">Hi!, I'm Urielma 🤓</h2>
+                    <h2 class="section-title typing-demo">Hi, I'm Urielma!</h2>
                     <p>Small web developer, self-taught and disciplined, with a strong desire to learn, teach, and guide
                         in various multidisciplinary fields, always eager to explore new technologies</p>
                     <p>I enjoy anime and reading manga, as well as listening to music all the time and playing video
