--- a/portafolio.html
+++ b/portafolio.html
@@ -47,7 +47,8 @@
                 <div class="about-content">
                     <h2 class="section-title typing-demo">Hi, I'm Urielma!</h2>
                     <p>Small web developer, self-taught and disciplined, with a strong desire to learn, teach, and guide
-                        in various multidisciplinary fields, always eager to explore new technologies</p>
+                        in various multidisciplinary fields, always eager to explore new technologies.</p>
+                        
                     <p>I enjoy anime and reading manga, as well as listening to music all the time and playing video
                         games.</p>
                 
