Peque;os ajustes

--- a/portafolio.html
+++ b/portafolio.html
@@ -56,7 +56,7 @@
                         <a href="https://github.com/Urielmajb" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/urielmajb/" target="_blank"><i
                                 class="fab fa-linkedin"></i></a>
-                        <a href="https://drive.google.com/file/d/1KPgKh9oEgpSw87hBAiRcza-ajIHcqRmA/view?usp=sharing" download style="text-decoration: none;" target="_blank"><i class="fa-solid fa-download"></i> Download CV</a>
+                        <a href="https://drive.google.com/file/d/1bZl0LnFpUQzS6q3Fh9LpXrAnpH4mNET6/view?usp=sharing" download style="text-decoration: none;" target="_blank"><i class="fa-solid fa-download"></i> Download CV</a>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="skill">
-            <span><strong>POWERBI, TABLEU, EXCEL</strong></span>
+            <span><strong>FIGMA, BALSAMIQ</strong></span>
             <div class="progress">
                 <div class="progress-bar Powerbi"><strong>90%</strong></div>
             </div>
@@ -177,6 +177,29 @@
               <!-- Agrega más proyectos aquí siguiendo el mismo formato -->
             <article class="article-wrapper">
                 <div class="container-project">
+                    <a href="https://github.com/Urielmajb/Wireframing-Projects.git" target="_blank">
+                        <img src="assets/img/Wireframe.png" alt="Proyecto 2">
+                    </a>
+                </div>
+                <div class="project-info">
+                    <div class="flex-pr">
+                        <div class="project-title">Wireframing Projects</div>
+                        <div class="project-hover">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+                                <line y2="12" x2="19" y1="12" x1="5"></line>
+                                <polyline points="12 5 19 12 12 19"></polyline>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="types">
+                        <span class="project-type">• Figma</span>
+                    </div>
+                </div>
+            </article>
+            <!-- Más proyectos -->
+              <!-- Agrega más proyectos aquí siguiendo el mismo formato -->
+            <article class="article-wrapper">
+                <div class="container-project">
                     <a href="https://example.com" target="_blank">
                         <img src="assets/img/comingsoon.png" alt="Proyecto 2">
                     </a>
@@ -192,32 +215,7 @@
                         </div>
                     </div>
                     <div class="types">
-                        <span class="project-type">• Data</span>
-                        <span class="project-type">• SQL</span>
-                    </div>
-                </div>
-            </article>
-            <!-- Más proyectos -->
-              <!-- Agrega más proyectos aquí siguiendo el mismo formato -->
-            <article class="article-wrapper">
-                <div class="container-project">
-                    <a href="https://example.com" target="_blank">
-                        <img src="assets/img/comingsoon.png" alt="Proyecto 2">
-                    </a>
-                </div>
-                <div class="project-info">
-                    <div class="flex-pr">
-                        <div class="project-title">Dashboard Stats</div>
-                        <div class="project-hover">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
-                                <line y2="12" x2="19" y1="12" x1="5"></line>
-                                <polyline points="12 5 19 12 12 19"></polyline>
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="types">
-                        <span class="project-type">• Data</span>
-                        <span class="project-type">• PowerBi</span>
+                        <span class="project-type">• Python</span>
                     </div>
                 </div>
             </article>
