Actualizacion de proyectos

--- a/portafolio.html
+++ b/portafolio.html
@@ -148,6 +148,28 @@
                     </div>
                 </div>
             </article>
+            <article class="article-wrapper">
+                <div class="container-project">
+                    <a href="https://github.com/Urielmajb/Sistema-de-Gestion-de-Filas.git" target="_blank">
+                        <img src="assets/img/Sistema.png" alt="Proyecto 2">
+                    </a>
+                </div>
+                <div class="project-info">
+                    <div class="flex-pr">
+                        <div class="project-title">Queue System</div>
+                        <div class="project-hover">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+                                <line y2="12" x2="19" y1="12" x1="5"></line>
+                                <polyline points="12 5 19 12 12 19"></polyline>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="types">
+                        <span class="project-type">• JS</span>
+                        <span class="project-type">• PHP</span>
+                    </div>
+                </div>
+            </article>
             <!-- Agrega más proyectos aquí siguiendo el mismo formato -->
             <!-- <article class="article-wrapper">
                 <div class="container-project">
@@ -242,6 +264,7 @@
                     </div>
                 </div>
             </article>
+            
         </div>
         <button class="slider-nav next">&#10095;</button>
     </div>
