Update del Portafolio

--- a/portafolio.html
+++ b/portafolio.html
@@ -222,13 +222,13 @@
               <!-- Agrega más proyectos aquí siguiendo el mismo formato -->
             <article class="article-wrapper">
                 <div class="container-project">
-                    <a href="https://example.com" target="_blank">
-                        <img src="assets/img/comingsoon.png" alt="Proyecto 2">
+                    <a href="https://github.com/Urielmajb/HR-Analytics-Employee.git" target="_blank">
+                        <img src="assets/img/dash.png" alt="Proyecto 2">
                     </a>
                 </div>
                 <div class="project-info">
                     <div class="flex-pr">
-                        <div class="project-title">Data Cleaning</div>
+                        <div class="project-title">HR Analytics</div>
                         <div class="project-hover">
                             <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
                                 <line y2="12" x2="19" y1="12" x1="5"></line>
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                     <div class="types">
-                        <span class="project-type">• Python</span>
+                        <span class="project-type">• Powerbi</span>
                     </div>
                 </div>
             </article>
