--- a/portafolio.html
+++ b/portafolio.html
@@ -56,7 +56,7 @@
                         <a href="https://github.com/Urielmajb" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/urielmajb/" target="_blank"><i
                                 class="fab fa-linkedin"></i></a>
-                        <a href="https://drive.google.com/file/d/1bZl0LnFpUQzS6q3Fh9LpXrAnpH4mNET6/view?usp=sharing" download style="text-decoration: none;" target="_blank"><i class="fa-solid fa-download"></i> Download CV</a>
+                        <a href="https://drive.google.com/file/d/1b5sjbXsLcgqEz-X-LLikaWECUhKTt0IG/view?usp=drive_link" download style="text-decoration: none;" target="_blank"><i class="fa-solid fa-download"></i> Download CV</a>
                     </div>
                 </div>
             </div>
